fix: decrease the height of the header
Client informs that information is cut off
Realized: height of header decreased

--- a/wp-content/themes/dna/assets/scss/_imoveis-slide.scss
+++ b/wp-content/themes/dna/assets/scss/_imoveis-slide.scss
@@ -216,7 +216,7 @@
             border: none;
         }
         .carrosselimoveis{
-            height: calc(100vh - 80px);
+            height: calc(100vh - 100px);
         }
         // a tag de lançamento muda para a flag
         .lancamento{
